// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";
import type { BooksBookId } from "./Books";
import type { UserId } from "./User";

export type BatchJobsId = number;

/** Represents the table public.batch_jobs */
export default interface BatchJobsTable {
  id: ColumnType<BatchJobsId, BatchJobsId | undefined, BatchJobsId>;

  batch_type: ColumnType<string, string, string>;

  openai_batch_id: ColumnType<string | null, string | null, string | null>;

  status: ColumnType<string, string | undefined, string>;

  book_id: ColumnType<
    BooksBookId | null,
    BooksBookId | null,
    BooksBookId | null
  >;

  bible_version: ColumnType<string, string, string>;

  model: ColumnType<string, string, string>;

  explanation_types: ColumnType<string[], string[], string[]>;

  total_requests: ColumnType<number, number | undefined, number>;

  completed_requests: ColumnType<number, number | undefined, number>;

  failed_requests: ColumnType<number, number | undefined, number>;

  input_file_path: ColumnType<string | null, string | null, string | null>;

  output_file_path: ColumnType<string | null, string | null, string | null>;

  total_tokens: ColumnType<number | null, number | null, number | null>;

  prompt_tokens: ColumnType<number | null, number | null, number | null>;

  completion_tokens: ColumnType<number | null, number | null, number | null>;

  estimated_cost: ColumnType<number | null, number | null, number | null>;

  actual_cost: ColumnType<number | null, number | null, number | null>;

  created_by: ColumnType<UserId, UserId, UserId>;

  created_at: ColumnType<Date, Date | string | undefined, Date | string>;

  started_at: ColumnType<
    Date | null,
    Date | string | null,
    Date | string | null
  >;

  completed_at: ColumnType<
    Date | null,
    Date | string | null,
    Date | string | null
  >;

  error_message: ColumnType<string | null, string | null, string | null>;

  explanations_processed: ColumnType<boolean, boolean | undefined, boolean>;

  parent_batch_id: ColumnType<
    BatchJobsId | null,
    BatchJobsId | null,
    BatchJobsId | null
  >;

  error_file_content: ColumnType<string | null, string | null, string | null>;
}

export type BatchJobs = Selectable<BatchJobsTable>;

export type NewBatchJobs = Insertable<BatchJobsTable>;

export type BatchJobsUpdate = Updateable<BatchJobsTable>;
