// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";

export type BibleVersionsId = string;

/** Represents the table public.bible_versions */
export default interface BibleVersionsTable {
  id: ColumnType<BibleVersionsId, BibleVersionsId | undefined, BibleVersionsId>;

  version_key: ColumnType<string, string, string>;

  version_name: ColumnType<string, string, string>;

  language_code: ColumnType<string, string, string>;

  is_active: ColumnType<boolean | null, boolean | null, boolean | null>;

  created_at: ColumnType<
    Date | null,
    Date | string | null,
    Date | string | null
  >;
}

export type BibleVersions = Selectable<BibleVersionsTable>;

export type NewBibleVersions = Insertable<BibleVersionsTable>;

export type BibleVersionsUpdate = Updateable<BibleVersionsTable>;
