// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";
import type { ChaptersChapterId } from "./Chapters";
import type { default as StatusEnum } from "./StatusEnum";
import type { UserId } from "./User";

export type ConversationsConversationId = number;

/** Represents the table public.conversations */
export default interface ConversationsTable {
  conversation_id: ColumnType<
    ConversationsConversationId,
    ConversationsConversationId | undefined,
    ConversationsConversationId
  >;

  user_id: ColumnType<UserId, UserId, UserId>;

  title: ColumnType<string, string, string>;

  chapter_id: ColumnType<
    ChaptersChapterId,
    ChaptersChapterId,
    ChaptersChapterId
  >;

  status: ColumnType<StatusEnum, StatusEnum, StatusEnum>;

  created_at: ColumnType<
    Date | null,
    Date | string | null,
    Date | string | null
  >;

  updated_at: ColumnType<
    Date | null,
    Date | string | null,
    Date | string | null
  >;
}

export type Conversations = Selectable<ConversationsTable>;

export type NewConversations = Insertable<ConversationsTable>;

export type ConversationsUpdate = Updateable<ConversationsTable>;
