// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";
import type { ExplanationsExplanationId } from "./Explanations";
import type { UserId } from "./User";

export type ExplanationRatingsRatingId = number;

/** Represents the table public.explanation_ratings */
export default interface ExplanationRatingsTable {
  rating_id: ColumnType<
    ExplanationRatingsRatingId,
    ExplanationRatingsRatingId | undefined,
    ExplanationRatingsRatingId
  >;

  stars: ColumnType<number, number, number>;

  user_id: ColumnType<UserId, UserId, UserId>;

  explanation_id: ColumnType<
    ExplanationsExplanationId,
    ExplanationsExplanationId,
    ExplanationsExplanationId
  >;
}

export type ExplanationRatings = Selectable<ExplanationRatingsTable>;

export type NewExplanationRatings = Insertable<ExplanationRatingsTable>;

export type ExplanationRatingsUpdate = Updateable<ExplanationRatingsTable>;
