// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";
import type { BibleVersionsId } from "./BibleVersions";
import type { ChaptersChapterId } from "./Chapters";
import type { default as ExplanationTypeEnum } from "./ExplanationTypeEnum";

export type ExplanationsExplanationId = number;

/** Represents the table public.explanations */
export default interface ExplanationsTable {
  explanation_id: ColumnType<
    ExplanationsExplanationId,
    ExplanationsExplanationId | undefined,
    ExplanationsExplanationId
  >;

  type: ColumnType<
    ExplanationTypeEnum,
    ExplanationTypeEnum,
    ExplanationTypeEnum
  >;

  explanation: ColumnType<string, string, string>;

  chapter_id: ColumnType<
    ChaptersChapterId,
    ChaptersChapterId,
    ChaptersChapterId
  >;

  version_id: ColumnType<BibleVersionsId, BibleVersionsId, BibleVersionsId>;

  version: ColumnType<number, number | undefined, number>;

  is_active: ColumnType<boolean, boolean | undefined, boolean>;

  created_by_admin: ColumnType<boolean, boolean | undefined, boolean>;

  parent_explanation_id: ColumnType<
    ExplanationsExplanationId | null,
    ExplanationsExplanationId | null,
    ExplanationsExplanationId | null
  >;

  created_at: ColumnType<Date, Date | string | undefined, Date | string>;
}

export type Explanations = Selectable<ExplanationsTable>;

export type NewExplanations = Insertable<ExplanationsTable>;

export type ExplanationsUpdate = Updateable<ExplanationsTable>;
