// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";
import type { ChaptersChapterId } from "./Chapters";
import type { default as FavoriteTypeEnum } from "./FavoriteTypeEnum";
import type { UserId } from "./User";

export type FavoritesFavoriteId = number;

/** Represents the table public.favorites */
export default interface FavoritesTable {
  favorite_id: ColumnType<
    FavoritesFavoriteId,
    FavoritesFavoriteId | undefined,
    FavoritesFavoriteId
  >;

  type: ColumnType<FavoriteTypeEnum, FavoriteTypeEnum, FavoriteTypeEnum>;

  user_id: ColumnType<UserId, UserId, UserId>;

  chapter_id: ColumnType<
    ChaptersChapterId,
    ChaptersChapterId,
    ChaptersChapterId
  >;
}

export type Favorites = Selectable<FavoritesTable>;

export type NewFavorites = Insertable<FavoritesTable>;

export type FavoritesUpdate = Updateable<FavoritesTable>;
