// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";

export type KyselyMigrationLockId = string;

/** Represents the table public.kysely_migration_lock */
export default interface KyselyMigrationLockTable {
  id: ColumnType<
    KyselyMigrationLockId,
    KyselyMigrationLockId,
    KyselyMigrationLockId
  >;

  is_locked: ColumnType<number, number | undefined, number>;
}

export type KyselyMigrationLock = Selectable<KyselyMigrationLockTable>;

export type NewKyselyMigrationLock = Insertable<KyselyMigrationLockTable>;

export type KyselyMigrationLockUpdate = Updateable<KyselyMigrationLockTable>;
