// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";
import type { ConversationsConversationId } from "./Conversations";
import type { default as RoleEnum } from "./RoleEnum";

export type MessagesMessageId = number;

/** Represents the table public.messages */
export default interface MessagesTable {
  message_id: ColumnType<
    MessagesMessageId,
    MessagesMessageId | undefined,
    MessagesMessageId
  >;

  conversation_id: ColumnType<
    ConversationsConversationId,
    ConversationsConversationId,
    ConversationsConversationId
  >;

  content: ColumnType<string, string, string>;

  role: ColumnType<RoleEnum, RoleEnum, RoleEnum>;

  generated_at: ColumnType<
    Date | null,
    Date | string | null,
    Date | string | null
  >;
}

export type Messages = Selectable<MessagesTable>;

export type NewMessages = Insertable<MessagesTable>;

export type MessagesUpdate = Updateable<MessagesTable>;
