// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";
import type { default as PromptStatusEnum } from "./PromptStatusEnum";

export type PromptsPromptId = number;

/** Represents the table public.prompts */
export default interface PromptsTable {
  prompt_id: ColumnType<
    PromptsPromptId,
    PromptsPromptId | undefined,
    PromptsPromptId
  >;

  prompt: ColumnType<string, string, string>;

  status: ColumnType<PromptStatusEnum, PromptStatusEnum, PromptStatusEnum>;

  prompt_type: ColumnType<string, string | undefined, string>;
}

export type Prompts = Selectable<PromptsTable>;

export type NewPrompts = Insertable<PromptsTable>;

export type PromptsUpdate = Updateable<PromptsTable>;
