// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";
import type { ChaptersChapterId } from "./Chapters";

export type SubtitlesSubtitleId = number;

/** Represents the table public.subtitles */
export default interface SubtitlesTable {
  subtitle_id: ColumnType<
    SubtitlesSubtitleId,
    SubtitlesSubtitleId | undefined,
    SubtitlesSubtitleId
  >;

  chapter_id: ColumnType<
    ChaptersChapterId,
    ChaptersChapterId,
    ChaptersChapterId
  >;

  subtitle: ColumnType<string, string, string>;

  start_verse: ColumnType<number, number, number>;

  end_verse: ColumnType<number, number, number>;
}

export type Subtitles = Selectable<SubtitlesTable>;

export type NewSubtitles = Insertable<SubtitlesTable>;

export type SubtitlesUpdate = Updateable<SubtitlesTable>;
