// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";

export type UserId = string;

/** Represents the table public.user */
export default interface UserTable {
  id: ColumnType<UserId, UserId | undefined, UserId>;

  email: ColumnType<string, string, string>;

  emailVerified: ColumnType<boolean, boolean | undefined, boolean>;

  password: ColumnType<string, string, string>;

  firstName: ColumnType<string, string, string>;

  lastName: ColumnType<string, string, string>;

  imageSrc: ColumnType<string | null, string | null, string | null>;

  createdAt: ColumnType<Date, Date | string | undefined, Date | string>;

  preferred_language: ColumnType<string | null, string | null, string | null>;

  preferred_bible_version: ColumnType<
    string | null,
    string | null,
    string | null
  >;
}

export type User = Selectable<UserTable>;

export type NewUser = Insertable<UserTable>;

export type UserUpdate = Updateable<UserTable>;
