// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";
import type { BooksBookId } from "./Books";
import type { ChaptersChapterId } from "./Chapters";
import type { UserId } from "./User";

export type UserProgressUserProgressId = number;

/** Represents the table public.user_progress */
export default interface UserProgressTable {
  user_progress_id: ColumnType<
    UserProgressUserProgressId,
    UserProgressUserProgressId | undefined,
    UserProgressUserProgressId
  >;

  user_id: ColumnType<UserId, UserId, UserId>;

  book_id: ColumnType<BooksBookId, BooksBookId, BooksBookId>;

  chapter_id: ColumnType<
    ChaptersChapterId,
    ChaptersChapterId,
    ChaptersChapterId
  >;

  last_visited_at: ColumnType<
    Date | null,
    Date | string | null,
    Date | string | null
  >;
}

export type UserProgress = Selectable<UserProgressTable>;

export type NewUserProgress = Insertable<UserProgressTable>;

export type UserProgressUpdate = Updateable<UserProgressTable>;
