// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";

export type UserPromptTemplatesId = number;

/** Represents the table public.user_prompt_templates */
export default interface UserPromptTemplatesTable {
  id: ColumnType<
    UserPromptTemplatesId,
    UserPromptTemplatesId | undefined,
    UserPromptTemplatesId
  >;

  template_name: ColumnType<string, string, string>;

  explanation_type: ColumnType<string, string, string>;

  prompt_template: ColumnType<string, string, string>;

  status: ColumnType<string, string | undefined, string>;

  created_at: ColumnType<Date, Date | string | undefined, Date | string>;

  updated_at: ColumnType<Date, Date | string | undefined, Date | string>;
}

export type UserPromptTemplates = Selectable<UserPromptTemplatesTable>;

export type NewUserPromptTemplates = Insertable<UserPromptTemplatesTable>;

export type UserPromptTemplatesUpdate = Updateable<UserPromptTemplatesTable>;
