// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { ColumnType, Insertable, Selectable, Updateable } from "kysely";
import type { BibleVersionsId } from "./BibleVersions";
import type { ChaptersChapterId } from "./Chapters";

export type VersesVerseId = number;

/** Represents the table public.verses */
export default interface VersesTable {
  verse_id: ColumnType<VersesVerseId, VersesVerseId | undefined, VersesVerseId>;

  chapter_id: ColumnType<
    ChaptersChapterId,
    ChaptersChapterId,
    ChaptersChapterId
  >;

  verse_number: ColumnType<number, number, number>;

  text: ColumnType<string, string, string>;

  version_id: ColumnType<BibleVersionsId, BibleVersionsId, BibleVersionsId>;
}

export type Verses = Selectable<VersesTable>;

export type NewVerses = Insertable<VersesTable>;

export type VersesUpdate = Updateable<VersesTable>;
