//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table batch_jobs {
  id Int [pk, increment]
  batch_type String [not null]
  openai_batch_id String
  status String [not null, default: 'pending']
  book_id Int
  bible_version String [not null]
  model String [not null]
  explanation_types String[] [not null]
  total_requests Int [not null, default: 0]
  completed_requests Int [not null, default: 0]
  failed_requests Int [not null, default: 0]
  input_file_path String
  output_file_path String
  total_tokens Int
  prompt_tokens Int
  completion_tokens Int
  estimated_cost Float
  actual_cost Float
  created_by String [not null]
  created_at DateTime [default: `now()`, not null]
  started_at DateTime
  completed_at DateTime
  error_message String
  explanations_processed Boolean [not null, default: false]
  books books
  user user [not null]
}

Table bible_versions {
  id String [pk]
  version_key String [unique, not null]
  version_name String [not null]
  language_code String [not null]
  is_active Boolean [default: true]
  created_at DateTime [default: `now()`]
  explanations explanations [not null]
  user user [not null]
  verses verses [not null]
}

Table books {
  book_id Int [pk, increment]
  name String [unique, not null]
  testament testament_enum [not null]
  genre_id Int [not null]
  batch_jobs batch_jobs [not null]
  genres genres [not null]
  chapters chapters [not null]
  user_progress user_progress [not null]
}

Table chapters {
  chapter_id Int [pk, increment]
  book_id Int [not null]
  chapter_number Int [not null]
  books books [not null]
  conversations conversations [not null]
  explanations explanations [not null]
  favorites favorites [not null]
  notes notes [not null]
  subtitles subtitles [not null]
  user_progress user_progress [not null]
  verses verses [not null]

  indexes {
    (book_id, chapter_number) [unique]
  }
}

Table conversations {
  conversation_id Int [pk, increment]
  user_id String [not null]
  title String [not null]
  chapter_id Int [not null]
  status status_enum [not null]
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  chapters chapters [not null]
  user user [not null]
  messages messages [not null]
}

Table explanation_ratings {
  rating_id Int [pk, increment]
  stars Int [not null]
  user_id String [not null]
  explanation_id Int [not null]
  explanations explanations [not null]
  user user [not null]

  indexes {
    (user_id, explanation_id) [unique]
  }
}

Table explanations {
  explanation_id Int [pk, increment]
  type explanation_type_enum [not null]
  explanation String [not null]
  chapter_id Int [not null]
  version_id String [not null]
  version Int [not null, default: 1]
  is_active Boolean [not null, default: true]
  created_by_admin Boolean [not null, default: false]
  parent_explanation_id Int
  created_at DateTime [default: `now()`, not null]
  explanation_ratings explanation_ratings [not null]
  chapters chapters [not null]
  explanations explanations
  other_explanations explanations [not null]
  bible_versions bible_versions [not null]

  indexes {
    (chapter_id, type, version_id) [unique]
  }
}

Table favorites {
  favorite_id Int [pk, increment]
  type favorite_type_enum [not null]
  user_id String [not null]
  chapter_id Int [not null]
  chapters chapters [not null]
  user user [not null]
}

Table genres {
  genre_id Int [pk, increment]
  name String [unique, not null]
  books books [not null]
}

Table kysely_migration {
  name String [pk]
  timestamp String [not null]
}

Table kysely_migration_lock {
  id String [pk]
  is_locked Int [not null, default: 0]
}

Table messages {
  message_id Int [pk, increment]
  conversation_id Int [not null]
  content String [not null]
  role role_enum [not null]
  generated_at DateTime [default: `now()`]
  conversations conversations [not null]
}

Table prompts {
  prompt_id Int [pk, increment]
  prompt String [not null]
  status prompt_status_enum [not null]
}

Table subtitles {
  subtitle_id Int [pk, increment]
  chapter_id Int [not null]
  subtitle String [not null]
  start_verse Int [not null]
  end_verse Int [not null]
  chapters chapters [not null]

  indexes {
    (chapter_id, start_verse, end_verse) [unique]
  }
}

Table user {
  id String [pk]
  email String [unique, not null]
  emailVerified Boolean [not null, default: false]
  password String [not null]
  firstName String [not null]
  lastName String [not null]
  imageSrc String
  createdAt DateTime [default: `now()`, not null]
  preferred_language String [default: 'en']
  preferred_bible_version String [default: 'NASB1995']
  is_admin Boolean [not null, default: false]
  batch_jobs batch_jobs [not null]
  conversations conversations [not null]
  explanation_ratings explanation_ratings [not null]
  favorites favorites [not null]
  notes notes [not null]
  bible_versions bible_versions
  user_progress user_progress [not null]
}

Table user_progress {
  user_progress_id Int [pk, increment]
  user_id String [not null]
  book_id Int [not null]
  chapter_id Int [not null]
  last_visited_at DateTime [default: `now()`]
  books books [not null]
  chapters chapters [not null]
  user user [not null]

  indexes {
    (user_id, book_id, chapter_id) [unique]
  }
}

Table user_prompt_templates {
  id Int [pk, increment]
  template_name String [not null]
  explanation_type String [not null]
  prompt_template String [not null]
  status String [not null, default: 'active']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
}

Table verses {
  verse_id Int [pk, increment]
  chapter_id Int [not null]
  verse_number Int [not null]
  text String [not null]
  version_id String [not null]
  chapters chapters [not null]
  bible_versions bible_versions [not null]
  notes notes [not null]

  indexes {
    (chapter_id, verse_number, version_id) [unique]
  }
}

Table notes {
  note_id String [pk]
  user_id String [not null]
  chapter_id Int [not null]
  verse_id Int
  content String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  chapters chapters [not null]
  verses verses
  user user [not null]
}

Enum explanation_type_enum {
  summary
  byline
  detailed
}

Enum favorite_type_enum {
  chapter
  message
}

Enum prompt_status_enum {
  active
  inactive
}

Enum role_enum {
  user
  assistant
}

Enum status_enum {
  active
  inactive
  archived
}

Enum testament_enum {
  OT
  NT
}

Ref: batch_jobs.book_id > books.book_id [delete: No Action]

Ref: batch_jobs.created_by > user.id [delete: No Action]

Ref: books.genre_id > genres.genre_id [delete: Cascade]

Ref: chapters.book_id > books.book_id [delete: Cascade]

Ref: conversations.chapter_id > chapters.chapter_id [delete: Cascade]

Ref: conversations.user_id > user.id [delete: Cascade]

Ref: explanation_ratings.explanation_id > explanations.explanation_id [delete: Cascade]

Ref: explanation_ratings.user_id > user.id [delete: Cascade]

Ref: explanations.chapter_id > chapters.chapter_id [delete: Cascade]

Ref: explanations.parent_explanation_id - explanations.explanation_id [delete: No Action]

Ref: explanations.version_id > bible_versions.id [delete: Cascade]

Ref: favorites.chapter_id > chapters.chapter_id [delete: Cascade]

Ref: favorites.user_id > user.id [delete: Cascade]

Ref: messages.conversation_id > conversations.conversation_id [delete: Cascade]

Ref: subtitles.chapter_id > chapters.chapter_id [delete: Cascade]

Ref: user.preferred_bible_version > bible_versions.version_key [delete: No Action]

Ref: user_progress.book_id > books.book_id [delete: Cascade]

Ref: user_progress.chapter_id > chapters.chapter_id [delete: Cascade]

Ref: user_progress.user_id > user.id [delete: Cascade]

Ref: verses.chapter_id > chapters.chapter_id [delete: Cascade]

Ref: verses.version_id > bible_versions.id [delete: Cascade]

Ref: notes.chapter_id > chapters.chapter_id [delete: Cascade]

Ref: notes.verse_id > verses.verse_id [delete: Cascade]

Ref: notes.user_id > user.id [delete: Cascade]